# h-22-2

./: .env  README.md  data.json  pyproject.toml  requirements.txt
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: utils.py
catalog/migrations/: 0001_initial.py  0002_alter_product_date_alter_product_description_and_more.py  0003_alter_product_date_alter_product_last_modified_date.py  0004_version.py  0005_alter_product_description_alter_product_nomination.py  0006_alter_product_description_alter_product_nomination.py  0007_product_creator.py  0008_alter_version_version_control.py  0009_alter_version_options.py  0010_alter_version_options.py
catalog/templates/catalog/: base.html  home.html  product_detail.html  product_form.html  sing_in.html  trst.html
catalog/templatetags/: tags.py
config/: settings.py  urls.py
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
materials/: models.py  views.py
materials/migrations/: 0001_initial.py  0002_alter_material_slug_alter_material_views_count.py  0003_alter_material_slug.py
materials/templates/materials/: material_confirm_delete.html  (+3 more)
users/: forms.py  models.py  services.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_avatar_alter_user_country_and_more.py  0003_user_user.py  0004_alter_user_user.py  0005_user_verification_key_alter_user_is_active.py  0006_alter_user_is_active_alter_user_user_and_more.py  0007_alter_user_options.py  0008_alter_user_options.py  0009_alter_user_is_active.py  0010_alter_user_is_active.py
(+7 files in other folders)
