[tool.poetry]
name = "pythondjango"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
asgiref = "^3.7.2"
django = "^4.2.2"
sqlparse = "^0.4.4"
tzdata = "^2023.3"
nullable = "^0.2.0"
dogs = "^1.0"
django-request = "^1.6.3"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
